--- a/APAS__PluginImp/Views/PluginDemoView.xaml
+++ b/APAS__PluginImp/Views/PluginDemoView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="APAS_Plugin_RIGOL_DP800s.PluginDemoView"
+﻿<UserControl x:Class="APAS__Plugin_RIGOL_DP800s.Views.PluginDemoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:APAS_Plugin_RIGOL_DP800s"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:views="clr-namespace:APAS__Plugin_RIGOL_DP800s.Views"
              mc:Ignorable="d" 
              MaxHeight="300" MaxWidth="500"
              d:DesignHeight="300" d:DesignWidth="600">
@@ -39,7 +39,7 @@
                 </Grid.ColumnDefinitions>
                 <Image Source="/APAS_Plugin_RIGOL_DP800s;component/Resources/rigol_logo.png"
                         VerticalAlignment="Stretch" HorizontalAlignment="Left" Margin="5,3,0,5"/>
-                <local:BlinkingIndicator x:Name="blinkIndicator" Height="3" Width="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
+                <views:BlinkingIndicator x:Name="blinkIndicator" Height="3" Width="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
 
                 <StackPanel Grid.Column="1" >
                     <TextBlock Text="DP800 Series" Foreground="White"
@@ -55,17 +55,17 @@
 
         <GroupBox Grid.Row="1" 
                   Header="{Binding PsSingleChannel[0].BindingChannel}" IsEnabled="{Binding IsInitialized}">
-            <local:PsSingleChannelView DataContext="{Binding PsSingleChannel[0]}"/>
+            <views:PsSingleChannelView DataContext="{Binding PsSingleChannel[0]}"/>
         </GroupBox>
 
         <GroupBox Grid.Row="1" Grid.Column="1" 
                   Header="{Binding PsSingleChannel[1].BindingChannel}" IsEnabled="{Binding IsInitialized}" >
-            <local:PsSingleChannelView DataContext="{Binding PsSingleChannel[1]}"/>
+            <views:PsSingleChannelView DataContext="{Binding PsSingleChannel[1]}"/>
         </GroupBox>
         
         <GroupBox Grid.Row="1" Grid.Column="2"
                   Header="{Binding PsSingleChannel[2].BindingChannel}" IsEnabled="{Binding IsInitialized}" >
-            <local:PsSingleChannelView DataContext="{Binding PsSingleChannel[2]}"/>
+            <views:PsSingleChannelView DataContext="{Binding PsSingleChannel[2]}"/>
         </GroupBox>
     </Grid>
 </UserControl>
