--- a/APAS__PluginImp/Views/PsSingleChannelView.xaml
+++ b/APAS__PluginImp/Views/PsSingleChannelView.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl x:Class="APAS_Plugin_RIGOL_DP800s.PsSingleChannelView"
+﻿<UserControl x:Class="APAS__Plugin_RIGOL_DP800s.Views.PsSingleChannelView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:APAS_Plugin_RIGOL_DP800s"
-             xmlns:conv="clr-namespace:APAS_Plugin_RIGOL_DP800s.Converters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:converters="clr-namespace:APAS__Plugin_RIGOL_DP800s.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="230" d:DesignWidth="180">
 
@@ -40,7 +39,7 @@
                 <Setter Property="Height" Value="22"/>
                 <Setter Property="Margin" Value="1,0,0,0"/>
             </Style>
-            <conv:ReverseBoolConverter x:Key="reverseBool"/>
+            <converters:ReverseBoolConverter x:Key="reverseBool"/>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="70"/>
